# faultlines

./: .gitignore  .gitleaks.toml  .pre-commit-config.yaml  .secrets.baseline  CHANGELOG.md  CONTRIBUTING.md  EVAL_REPORT.md  PARTICIPANTS_REFACTOR_PLAN.md  PRICING_AND_INCREMENTAL_PLAN.md  PRODUCTION_LAUNCH_PLAN.md  README.md  REFACTOR_SPRINT_DONE.md  SELF_AUDIT.md  SELF_AUDIT_COMPARISON.md  SPRINT_11_PLAN.md  SPRINT_12_PLAN.md  SPRINT_12_RESULTS.md  SPRINT_12_VERDICT.md  SPRINT_13_RESULTS.md  SPRINT_14_PLAN.md  SPRINT_14_RESULTS.md  SPRINT_15_PLAN.md  SPRINT_15_RESULTS.md  SPRINT_16_PLAN.md  SPRINT_16_RESULTS.md  SPRINT_1_RESULTS.md  SPRINT_2_RESULTS.md  SPRINT_3_4_5_VALIDATION.md  SPRINT_3_PLAN.md  SPRINT_4_PLAN.md  SPRINT_5_PLAN.md  SPRINT_6_PLAN.md  SPRINT_7_PLAN.md  SPRINT_7_RESULTS.md  SPRINT_8_PLAN.md  SPRINT_9_PLAN.md  SPRINT_9_SCAN_LOG.md  pyproject.toml
.github/workflows/: ci.yml  eval-llm.yml  eval-smoke.yml  secrets-scan.yml
benchmarks/: README.md
benchmarks/_template/: expected_attribution_sample.yaml  expected_features.yaml  expected_flows.yaml
benchmarks/dify/: flow-truth-sprint12.yaml  flow-truth-sprint13.yaml  flow-truth-sprint14.yaml  flow-truth-sprint15.yaml  flow-truth.yaml
benchmarks/documenso/: .faultline.yaml  expected_features.yaml
benchmarks/excalidraw/: feature-map-postfix.json  feature-map-tier2.json
benchmarks/immich/: feature-map-postfix.json  feature-map-tier2.json  flow-truth.yaml  sprint12-baseline.json  sprint12-layer-a.json
docs/: index.html
faultline/: cli.py  mcp_server.py
memory/: MEMORY.md
scripts/: debug_s15.py  debug_s15_v2.py  eval_flow_attribution.py  eval_pr_comment.py  eval_run.py  landing_codegen.py  run_benchmark.py  simulate_layer_a.py
tests/: test_aggregator_agent.py  test_aggregator_apply.py  test_aggregator_consumers.py  test_aggregator_detector.py  test_auto_alias_discoverer.py  test_auto_fold_tooling.py  test_auto_refresh.py  test_benchmark.py  test_blame_index.py  test_bucket_promote.py  test_bucketizer.py  test_cache.py  test_cache_symbols.py  test_cloud.py  test_cochange_detector.py  test_collapse_path_aware.py  test_cost.py  test_coverage.py  test_coverage_detailed.py  test_critique.py  test_crud_enrichment.py  test_dedup.py  test_discovery.py  test_dynamic_cap.py  test_feature_category.py  test_feature_participants.py  test_features.py  test_fixable_improvements.py  test_flow_cluster.py  test_flow_detector.py  test_flow_detector_v2.py  test_flow_judge.py  test_flow_signals.py  test_flow_sweep.py  test_flow_symbols.py  test_flow_tracer.py  test_get_symbol_range.py  test_git.py  test_git_diff.py  test_go_imports.py  (+36 more)
(+99 files in other folders)
