[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "faultlines"
version = "0.5.0"
description = "Map features in any codebase from git history alone. No Jira required."
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Faultlines" },
]
keywords = [
    "git", "features", "technical-debt", "code-analysis",
    "engineering-metrics", "bug-fix-ratio", "health-score",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Quality Assurance",
    "Typing :: Typed",
]
dependencies = [
    "typer>=0.12.0",
    "gitpython>=3.1.40",
    "rich>=13.7.0",
    "pydantic>=2.5.0",
    "anthropic>=0.25.0",
]

[project.optional-dependencies]
ollama = ["ollama>=0.4.0"]
deepseek = ["openai>=1.0.0"]
analytics = ["httpx>=0.27.0"]
mcp = ["mcp>=1.0.0"]

[project.urls]
Homepage = "https://faultlines.dev"
Repository = "https://github.com/PashaSchool/faultlines"
Issues = "https://github.com/PashaSchool/faultlines/issues"

[project.scripts]
faultlines = "faultline.cli:app"
faultlines-mcp = "faultline.mcp_server:main"
# Keep the old name as alias for backwards compat

[tool.hatch.envs.default]
dependencies = [
    "pytest>=7.4.0",
    "pytest-cov",
]

[tool.hatch.envs.default.scripts]
test = "pytest tests/"

[tool.hatch.build.targets.wheel]
packages = ["faultline"]

[tool.pytest.ini_options]
addopts = [
    "--cov=faultline",
    "--cov-report=term-missing:skip-covered",
    "--cov-report=html:htmlcov",
    "--cov-config=pyproject.toml",
    "-q",
]
testpaths = ["tests"]

[tool.coverage.run]
source = ["faultline"]
omit = [
    "faultline/llm/detector.py",
    "faultline/llm/deepseek_client.py",
    "faultline/llm/flow_detector.py",
    "faultline/cli.py",
    "faultline/digest/*",
    "faultline/integrations/*",
    "faultline/output/reporter.py",
    "faultline/analyzer/evolve.py",
    "faultline/analyzer/incremental.py",
    "faultline/analyzer/shared_files.py",
]

[tool.coverage.report]
fail_under = 65
show_missing = true
skip_covered = true
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.",
    "if TYPE_CHECKING:",
]
precision = 1

[tool.coverage.html]
directory = "htmlcov"
